add meals to calendar and view meals for a specific day

--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "axios": "^1.2.4",
     "daisyui": "^2.47.0",
     "flowbite": "^1.6.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-date-picker": "^9.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-text-transition": "^3.0.2",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
