--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.4",
     "daisyui": "^2.47.0",
+    "dotenv": "^16.0.3",
     "flowbite": "^1.6.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -25,10 +26,11 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "set port=8080 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "aws-deploy": "aws s3 sync build/ s3://mealy-app"
   },
   "eslintConfig": {
     "extends": [
